--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="col-12 col-md-6 col-lg-3 no-padding">
                 <div class="portfolio-content">
                     <figure>
-                        <a href="https://forms.gle/CBNo3GWZ3kmcwQmXA">
+                        <a href="https://forms.gle/dCT7chQpYkNxm6K76">
                             <img src="images/6.jpg" alt="Экономика">
                             <p>30.09</p>
                         </a>
